--- a/index3.html
+++ b/index3.html
@@ -5,62 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="styles.css">
 
   <title>Frontend Mentor | Workit landing page</title>
-
-  <style>
-    /* CSS code goes here */
-    header {
-      text-align: center;
-      padding: 20px;
-      background-color: #f2f2f2;
-    }
-
-    main {
-      padding: 20px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #f2f2f2;
-    }
-  </style>
 </head>
 <body>
   <header>
-    <h1>Apply for access</h1>
-    <p>Data tailored to your needs.</p>
-    <a href="#learn-more">Learn more</a>
+    <nav>
+      <ul>
+        <li><a href="#learn-more">Learn More</a></li>
+        <li><a href="#apply-access">Apply for Access</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
     <section>
-      <h2>1</h2>
+      <h2>Customer focused</h2>
       <h3>Actionable insights</h3>
       <p>Optimize your products, improve customer satisfaction, and stay ahead of the competition
-      with our product data analytics.</p>
+        with our product data analytics.</p>
     </section>
 
     <section>
-      <h2>2</h2>
+      <h2>Go with the Data</h2>
       <h3>Data-driven decisions</h3>
       <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help
-      you unlock insights hidden in your product data.</p>
+        you unlock insights hidden in your product data.</p>
     </section>
 
     <section>
-      <h2>3</h2>
+      <h2>We make it Affordable</h2>
       <h3>Always affordable</h3>
       <p>Always affordable pricing that scales with your business. Get top-quality product data
-      analytics services without hidden costs or unexpected fees.</p>
+        analytics services without hidden costs or unexpected fees.</p>
     </section>
 
     <section id="learn-more">
       <h2>Be the first to test</h2>
       <p>Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a
-      beta tester for our app and kickstart your company. Apply for access below and I’ll be
-      in touch to schedule a call.</p>
+        beta tester for our app and kickstart your company. Apply for access below and I’ll be
+        in touch to schedule a call.</p>
       <a href="#apply-access">Apply for access</a>
     </section>
   </main>
